# standards

./: .gitignore  .markdownlint.json  CHANGELOG.md  Makefile  README.md  embed.go  go.mod  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
adapters/claude/: CLAUDE.md
adapters/copilot/: copilot-instructions.md
adapters/cursor/: api-management.mdc  bash.mdc  ci.mdc  coding.mdc  observability.mdc  platform.mdc  runtime.mdc  security.mdc
docs/: break-glass.md
docs/adr/: 0000-template.md  0001-standards-as-submodule-and-package.md  0002-coverage-baseline-in-repo.md  0003-architecture-governance-process.md  0004-workload-identity-spiffe-spire.md  0005-observability-opentelemetry.md  0006-opa-centralized-policy-engine.md  0007-zero-downtime-deployment.md  0008-rapid-key-rotation.md  0009-gitops-change-management.md
docs/rfc/: RFC-0000-template.md
go/: embed.go  go.mod
governance/: api-management.md  arb.md  bash.md  ci.md  coding.md  observability.md  platform.md  release-policy.md  runtime.md  security.md  testing.md
governance/ai/: conduct.md
scripts/: bootstrap-standards.sh  check-legal-drift.sh  format.sh  git_precommit.sh  lint.sh
scripts/check/: adr-metadata.sh  governance-metadata.sh  rfc-metadata.sh
scripts/ci/: audit-make-targets.sh  dco-check.sh  pr-policy.sh  secret-scan.sh  setup-markdownlint.sh  setup-shellcheck.sh  setup-syft.sh  verify-canonical-scripts.sh
scripts/lib/: paths.sh
scripts/lint/: markdown.sh  md.sh  newlines.sh  shellcheck.sh
(+9 files in other folders)
