[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keelcore-standards"
version = "0.1.0"
description = "Engineering standards for keelcore projects — coding, CI, and bash."
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.hatch.build.targets.wheel]
include = ["governance/"]
