[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "keelcore-standards"
dynamic = ["version"]
description = "Engineering standards for keelcore projects — coding, CI, and bash."
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["governance/"]
